--- a/proxy.conf
+++ b/proxy.conf
@@ -1,6 +1,6 @@
 [global]
 ;;;;;;;;;;;;;;;;;;;;;
-;; Server settings ;;
+;; Server settings ye ;;
 ;;;;;;;;;;;;;;;;;;;;;
 
 ;; The DNS-address your proxy resides on.
